--- a/src/app/pricing-card/pricing-card.component.css
+++ b/src/app/pricing-card/pricing-card.component.css
@@ -1,99 +1,110 @@
 .planner-page {
-    height: 150vh;
-    background-color: black;
-  
-    .current-plan {
-      background-color: #a81f45;
-      width: 12rem;
-      color: white;
-      text-align: center;
-      margin: 0 auto;
-      border-radius: 0 0 5px 5px;
-      /* position: fixed;
-      height: 9vh;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 50%;
-      max-width: 200px;
-      padding: 5px; */
-  
-      p {
-        font-size: 0.6rem;
-      }
-      h5 {
-        font-size: 0.9rem;
-      }
+  margin: 0;
+  background-color: black;
+  box-sizing: border-box;
+  height: auto;
+
+  .current-plan {
+    background-color: #a81f45;
+    width: 12rem;
+    color: white;
+    text-align: center;
+    margin: 0 auto;
+    border-radius: 0 0 5px 5px;
+
+    p {
+      font-size: 0.6rem;
+    }
+    h5 {
+      font-size: 0.9rem;
     }
   }
-  
-  .pricing-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .pricing-card {
-    background-color: #22262c;
-    width: 225px;
-    margin: 11px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .card-header {
-    background-color: #22262c;
+
+  .choose {
     color: white;
-    text-align: center;
-    padding: 5px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    padding-top: 15px;
+
+    p {
+      font-size: 25px;
+      text-align: center;
+    }
   }
-  
-  .card-header h2 {
-    font-size: 0.9rem;
-  }
-  
-  .card-header p {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-  
-  .card-body {
-    padding: 8px;
-  }
-  
-  .card-body ul {
-    padding-left: 25px;
-  }
-  
-  .card-body li {
-    color: aliceblue;
-    margin: 8px;
-  }
-  
-  .card-body li::marker {
-    color: #a81f45;
-  }
-  
-  .card-footer {
-    text-align: center;
-    padding: 20px;
-  }
-  
-  .btn {
-    background-color: #22262c;
-    color: white;
-    border: 2px solid red; /* Added border with red color */
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    align-items: center;
-    transition: background-color 0.3s ease;
-    margin: 5px;
-  }
-  
-  .btn:hover {
-    background-color: red;
-  }
+}
+
+.pricing-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 100px;
+}
+
+.pricing-card {
+  background-color: #22262c;
+  width: 230px;
+  margin: 7px;
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.card-header {
+  background-color: #22262c;
+  color: white;
+  text-align: center;
+  padding: 5px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.card-header h2 {
+  font-size: 0.9rem;
+}
+
+.card-header p {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.card-body {
+  padding: 8px;
+  height: 27vh;
+}
+.select {
+  text-align: center;
+  background-color: #22262c;
+}
+
+.card-body ul {
+  padding-left: 25px;
+}
+
+.card-body li {
+  color: white;
+  margin: 8px;
+  line-height: 1.4;
+  font-size: 12px;
+}
+
+.card-body li::marker {
+  color: #a81f45;
+}
+
+.card-footer {
+  text-align: center;
+  padding: 20px;
+}
+
+.btn {
+  background-color: #22262c;
+  text-decoration: none;
+  color: white;
+  border: 2px solid red;
+  padding: 6px 15px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 13px;
+}
+
+.btn:hover {
+  background-color: red;
+}
