--- a/src/app/pricing-card/pricing-card.component.html
+++ b/src/app/pricing-card/pricing-card.component.html
@@ -1,62 +1,90 @@
-<div class="planner-page">
-    <div class="current-plan">
-      <p>Your current plan:</p>
-      <h5>Starter Trial &#8226; 500MAUs</h5>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="planner-page">
+      <div class="current-plan">
+        <p>Your current plan:</p>
+        <h5>Starter Trial &#8226; 500MAUs</h5>
+      </div>
+
+      <div class="choose">
+        <p>Choose a plan</p>
+      </div>
+
+      <div class="pricing-container">
+        <!-- Card 1 -->
+        <div class="pricing-card">
+          <div class="card-header">
+            <h2>Starter</h2>
+            <p class="price">$19</p>
+          </div>
+          <div class="card-body">
+            <ul>
+              <li>500 MAUs</li>
+              <li>Unlimited guides</li>
+              <li>Unlimited flows</li>
+              <li>Unlimited branded themes</li>
+              <li>Email support</li>
+            </ul>
+          </div>
+          <div class="card-footer">
+            <button class="btn">Choose Plan</button>
+          </div>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="pricing-card">
+          <div class="card-header">
+            <h2>Pro</h2>
+            <p class="price">$99/month</p>
+          </div>
+
+          <div class="card-body">
+            <div class="select">
+              <select name="" id="">
+                <option value="" selected>2500MAUs</option>
+                <option value="">1000MAUs</option>
+                <option value="">500MAUs</option>
+              </select>
+            </div>
+
+            <ul>
+              <li>All starter features, plus:</li>
+              <li>Unlimited projects</li>
+              <li>Unlimited fully customizable themes</li>
+              <li>A dedicated customer success manager</li>
+            </ul>
+          </div>
+          <div class="card-footer">
+            <button class="btn">Choose Plan</button>
+          </div>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="pricing-card">
+          <div class="card-header">
+            <h2>Enterprise</h2>
+            <p class="price">$29.99/month</p>
+          </div>
+          <div class="card-body">
+            <ul>
+              <li>All Pro features</li>
+              <li>Unlimited MAUs</li>
+              <li>Dedicated Environment</li>
+              <li>Enterprise account administration</li>
+              <li>Premium support services</li>
+            </ul>
+          </div>
+          <div class="card-footer">
+            <button class="btn">Contact Us</button>
+          </div>
+        </div>
+      </div>
     </div>
-  
-    <div class="pricing-container">
-      <div class="pricing-card">
-        <div class="card-header">
-          <h2>Starter</h2>
-          <p class="price">$19</p>
-        </div>
-        <div class="card-body">
-          <ul>
-            <li>500 MAUs</li>
-            <li>Unlimited guides</li>
-            <li>Unlimited flows</li>
-            <li>Unlimited branded themes</li>
-            <li>Email support</li>
-          </ul>
-        </div>
-        <div class="card-footer">
-          <button class="btn">Choose Plan</button>
-        </div>
-      </div>
-      <div class="pricing-card">
-        <div class="card-header">
-          <h2>Pro</h2>
-          <p class="price">$99/month</p>
-        </div>
-        <div class="card-body">
-          <ul>
-            <li>All starter features, plus:</li>
-            <li>Unlimited projects</li>
-            <li>Unlimited fully customizable themes</li>
-            <li>A dedicated customer success manager</li>
-          </ul>
-        </div>
-        <div class="card-footer">
-          <button class="btn">Choose Plan</button>
-        </div>
-      </div>
-      <div class="pricing-card">
-        <div class="card-header">
-          <h2>Enterprise</h2>
-          <p class="price">$29.99/month</p>
-        </div>
-        <div class="card-body">
-          <ul>
-            <li>All Pro features</li>
-            <li>Unlimited MAUs</li>
-            <li>Dedicated Environment</li>
-            <li>Enterprise account administration</li>
-            <li>Premium support services</li>
-          </ul>
-        </div>
-        <div class="card-footer">
-          <button class="btn">Contact Us</button>
-        </div>
-      </div>
-    </div>
-  </div>
+  </body>
+</html>
