--- a/src/app/pricing-card/pricing-card.component.css
+++ b/src/app/pricing-card/pricing-card.component.css
@@ -22,10 +22,15 @@
 
   .choose {
     color: white;
-    padding-top: 15px;
+    padding-top: 10px;
+
+    h3 {
+      text-align: center;
+    }
 
     p {
-      font-size: 25px;
+      bottom: 0;
+      font-size: 18px;
       text-align: center;
     }
   }
@@ -35,12 +40,12 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 100px;
+  margin-top: 80px;
 }
 
 .pricing-card {
   background-color: #22262c;
-  width: 230px;
+  width: 220px;
   margin: 7px;
   overflow: hidden;
   border-radius: 8px;
@@ -72,6 +77,14 @@
 .select {
   text-align: center;
   background-color: #22262c;
+
+  .dropdown {
+    background-color: #22262c;
+    color: white;
+    width: 160px;
+    height: 7vh;
+    border: 2px solid gray;
+  }
 }
 
 .card-body ul {
@@ -98,7 +111,7 @@
   background-color: #22262c;
   text-decoration: none;
   color: white;
-  border: 2px solid red;
+  border: 2px solid #a81f45;
   padding: 6px 15px;
   cursor: pointer;
   transition: background-color 0.3s ease;
@@ -106,5 +119,5 @@
 }
 
 .btn:hover {
-  background-color: red;
+  background-color: #a81f45;
 }
