--- a/src/app/pricing-card/pricing-card.component.css
+++ b/src/app/pricing-card/pricing-card.component.css
@@ -2,11 +2,14 @@
   margin: 0;
   background-color: black;
   box-sizing: border-box;
-  height: auto;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   .current-plan {
     background-color: #a81f45;
-    width: 12rem;
+    width: 14rem;
     color: white;
     text-align: center;
     margin: 0 auto;
@@ -20,18 +23,64 @@
     }
   }
 
+  h3 {
+    color: white;
+    text-align: center;
+  }
   .choose {
     color: white;
-    padding-top: 10px;
-
-    h3 {
-      text-align: center;
-    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
 
     p {
       bottom: 0;
-      font-size: 18px;
+      font-size: 13px;
       text-align: center;
+    }
+
+    .switch {
+      width: 70px;
+      height: 28px;
+      position: relative;
+      display: inline-block;
+
+      input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        border-radius: 20px;
+        background-color: #22262c;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+      }
+      .slider:before {
+        position: absolute;
+        content: "";
+        height: 20px;
+        background-color: white;
+        width: 20px;
+        left: 4px;
+        bottom: 4px;
+        border-radius: 50%;
+        transition: 0.4s;
+      }
+      input:checked + .slider {
+        background-color: #bc1e41;
+      }
+
+      input:checked + .slider:before {
+        background-color: white;
+        transform: translateX(46px);
+      }
     }
   }
 }
@@ -40,7 +89,6 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 80px;
 }
 
 .pricing-card {
@@ -56,7 +104,6 @@
   background-color: #22262c;
   color: white;
   text-align: center;
-  padding: 5px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
@@ -71,8 +118,8 @@
 }
 
 .card-body {
-  padding: 8px;
-  height: 27vh;
+  padding: 5px;
+  height: 28vh;
 }
 .select {
   text-align: center;
